tests/snapshots/run_wpt_conformance__onnx_reduceLogSum_float16_4D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum.https.any.js",
    "reduceLogSum float16 4D tensor options.keepDimensions=false",
    "onnx",
    "PASS",
)
